# freq-pattern-mining

./: README.md  main.py  pyproject.toml
